fix(TDP-3874): find and group dialog visual glitches (#648)
* fix(TDP-3874): find and group dialog visual glitches
also fixed an issue with checkboxes on ie

* fix: blurry font

* fix: add test

* fix: form inputs can be displayed in front of thead

--- a/dataprep-webapp/src/app/components/transformation/form/cluster/_transformation-cluster-params.scss
+++ b/dataprep-webapp/src/app/components/transformation/form/cluster/_transformation-cluster-params.scss
@@ -100,6 +100,11 @@
 			th {
 				@include column-border($border-color);
 				padding: $cell-vertical-space $cell-horizontal-space;
+
+				.checkbox {
+					border-collapse: separate;
+					margin-bottom: 0px;
+				}
 			}
 		}
 
@@ -109,6 +114,8 @@
 			top: 0;
 			display: table;
 			width: 100%;
+			z-index: 2;
+
 			th {
 				@include column-sizes();
 
